Dashboard and profile pages & improvements

--- a/profile.html
+++ b/profile.html
@@ -103,11 +103,14 @@
     </div>
 
     <!-- PROFILE -->
-    <div class="main-content-wrapper">
-        <div class="row no-gutters mt-3">
-            <div class="col-4">
+    <div class="main-content-wrapper mt-3">
+        <div class="row no-gutters px-3">
+            <div class="col-4 text-center">
+                <div class="main-bg-props">
+                    <h3>edit profile</h3>
                 <div class="profile-img">
                     <img src="./assets/006-man.png" alt="man avatar">
+                </div>
                 </div>
             </div>
             <div class="col-8"></div>
